--- a/pages/register.html
+++ b/pages/register.html
@@ -1,21 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <title>Register</title>
 </head>
 <body>
-	<form class="form-signin" method="POST" action="">
-  	<h2 class="form-signin-heading">Please sign in</h2>
-  	<input class="form-control" type="text" 	name="email" placeholder="Email address">
-  	<input class="form-control" type="password" name="password" placeholder="Password">
-  	<input class="form-control" type="date" 	name="birthDate" placeholder="Password">
-  	<input class="form-control" type="text" 	name="firstName" placeholder="Password">
-  	<input class="form-control" type="text" 	name="secondName" placeholder="Password">
-  	<input class="form-control" type="text" 	name="firstSurname" placeholder="Password">
-  	<input class="form-control" type="text" 	name="secondSurname" placeholder="Password">
-  	<button class="btn btn-lg btn-primary btn-block" type="button" onclick="goTo()">Sign in</button>
-</form>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="d-flex d-sm-block col-1 col-md-3 col-lg-3"></div>
+            <div class="col-10 col-md-6 col-lg-6">
+                <div id="register-container" class="card m-auto">
+                    <div class="card-header">
+                        Register
+                    </div>
+                    <div class="card-body">
+                        <form method="POST" action="api/register" class="form-signin">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="firstName">First Name</label>
+                                    <input id="firstName" name="firstName" type="text" class="form-control" placeholder="First Name">
+                                </div>
+                                <div class="col">
+                                    <label for="secondName">Second Name</label>
+                                    <input id="secondName" name="secondName" type="text" class="form-control" placeholder="Second Name">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <label for="firstSurname">First Surname</label>
+                                    <input id="firstSurname" name="firstSurname" type="text" class="form-control" placeholder="First Surname">
+                                </div>
+                                <div class="col">
+                                    <label for="secondSurname">Second Surname</label>
+                                    <input id="secondSurname" name="secondSurname" type="text" class="form-control" placeholder="Second Surname">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="birthDate">Birthdate</label>
+                                <input id="birthDate" name="birthDate" type="date" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail</label>
+                                <input id="email" name="email" type="email" class="form-control" placeholder="E-mail">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input id="password" name="password" type="password" class="form-control" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <button type="button" class="btn btn-primary float-right" onclick="goTo()">Register</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="btn-group-vertical">
+                        <a href="login.html" class="d-flex justify-content-end btn btn-link">
+                            Sign In
+                        </a>
+                    </div>                
+                </div>
+            </div>
+            <div class="d-flex d-sm-block col-1 col-md-3 col-lg-3"></div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 <script>
 function getCookie(name) {
@@ -35,8 +93,7 @@ function getCookie(name) {
     }
     return cookieValue;
 }
-function goTo () 
-{
+function goTo () {
  const url = 'http://localhost:8000/api/user/';
   // The data we are going to send in our request
   var dat = {
