Agregadas las validaciones en el formulario por pasos.

--- a/pages/register.html
+++ b/pages/register.html
@@ -55,7 +55,7 @@
                             </div>
                             <div class="form-group">
                                 <button type="button" class="btn btn-primary float-right" 
-                                onclick="validateForm('register-form')/*;goTo();*/">Register</button>
+                                onclick="validateForm('register-form');goTo();">Register</button>
                             </div>
                         </form>
                     </div>
