--- a/public/html/login.html
+++ b/public/html/login.html
@@ -20,7 +20,7 @@
                             Login
                         </div>
                         <div class="card-body">
-                            <form method="POST" action="api/login">
+                            <form name="login-form" method="POST" action="api/login">
                                 <div class="form-group">
                                     <label for="email">E-mail</label>
                                     <input id="email" name="email" type="email" class="form-control" placeholder="E-mail">
@@ -30,7 +30,8 @@
                                     <input id="password" name="password" type="password" class="form-control" placeholder="Password">
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-primary float-right">Login</button>
+                                    <button type="button" class="btn btn-primary float-right" 
+                                    onclick="validateForm('login-form');">Login</button>
                                 </div>
                             </form>
                         </div>
@@ -53,5 +54,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="../js/login.js"></script>
     </body>
 </html>
