Clases DAO creadas y mejorada la estructura de directorios.

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -7,20 +7,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Login | Mappy </title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Animated Login Form template Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login sign up Responsive web template, SmartPhone Compatible web template, free Web Designs for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Custom Theme files -->
-<link href='css/bootstrap.min.css' media='all' rel='stylesheet'>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link rel="stylesheet" href="css/animate.min.css"> 
-<!-- //Custom Theme files -->
-<!-- web font -->
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
-<!-- //web font --> 
+	<title>Login | Mappy </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Animated Login Form template Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login sign up Responsive web template, SmartPhone Compatible web template, free Web Designs for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<!-- Custom Theme files -->
+	<link href='css/bootstrap.min.css' media='all' rel='stylesheet'>
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/animate.min.css"> 
+	<!-- //Custom Theme files -->
+	<!-- web font -->
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
+	<!-- //web font --> 
 </head>
 <body>
 	<div class="row">
@@ -58,6 +58,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src='js/jquery.validate.min.js'></script>
 	<script src='js/formAnimation.js'></script>
 	<script src='js/shake.js'></script> 
+	<script src="../global_js/Validator.js"></script>
+	<script src="js/index.js"></script>
 	<!-- //js -->
 </body>
 </html>
