--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -57,6 +57,7 @@
     </fieldset>
   </form>
   <h1><a href="">¿Ya tienes una cuenta? Inicia sesión</a></h1>
+  <script src="js/Validator.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
