--- a/pages/forms/login.html
+++ b/pages/forms/login.html
@@ -43,7 +43,7 @@
 								</div>
 
 								<div class="form-group m-0">
-									<button type="submit" class="btn btn-primary btn-block">
+									<button type="button" onclick="login()" class="btn btn-primary btn-block">
 										Iniciar sesión
 									</button>
 								</div>
@@ -64,5 +64,7 @@
 	<script src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
+	<script src="{% static 'dao/UserDao.js' %}"></script>
+	<script src="{% static 'js/login.js' %}"></script>
 </body>
 </html>
