--- a/pages/forms/signup.html
+++ b/pages/forms/signup.html
@@ -99,7 +99,7 @@
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/Validator.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
-	<script src="{% static 'dao/UserDao.js' %}"></script>
+	<script src="{% static 'js/userdao.js' %}"></script>
 	<script src="{% static 'js/signup.js' %}"></script>
 </body>
 </html>
