--- a/pages/forms/login.html
+++ b/pages/forms/login.html
@@ -64,7 +64,7 @@
 	<script src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
-	<script src="{% static 'dao/UserDao.js' %}"></script>
+	<script src="{% static 'js/userdao.js' %}"></script>
 	<script src="{% static 'js/login.js' %}"></script>
 </body>
 </html>
