--- a/pages/userszone.html
+++ b/pages/userszone.html
@@ -39,7 +39,7 @@
 	<script src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
-	<script src="{% static 'dao/UserDao.js' %}"></script>
+	<script src="{% static 'js/userdao.js' %}"></script>
 	<script src="{% static 'js/logout.js' %}"></script>
 </body>
 </html>
