Arreglados los enfoques de campos en Formulario de Registro.

--- a/pages/forms/signup.html
+++ b/pages/forms/signup.html
@@ -22,30 +22,30 @@
 							<h4 class="card-title">Crea una cuenta</h4>
 							<form method="POST" class="my-login-validation" novalidate="">
 								<div class="form-group">
-									<label class="abc" for="name">Primer nombre</label>
+									<label class="abc" for="firstName">Primer nombre</label>
 									<input id="firstName" type="text" class="form-control" name="name" required autofocus>
 									<div class="invalid-feedback">
 										¿Cuál es tu nombre?
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="name">Segundo nombre</label>
+									<label for="secondName">Segundo nombre</label>
 									<input id="secondName" type="text" class="form-control" name="name" autofocus>
 								</div>
 								<div class="form-group">
-									<label class="abc" for="name">Primer Apellido</label>
+									<label class="abc" for="firstSurname">Primer Apellido</label>
 									<input id="firstSurname" type="text" class="form-control" name="name" required autofocus>
 									<div class="invalid-feedback">
 										¿Cuál es tu Apellido?
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="name">Segundo apellido</label>
+									<label for="secondSurname">Segundo apellido</label>
 									<input id="secondSurname" type="text" class="form-control" name="name" autofocus>
 								</div>
 								<div class="form-group">
-									<label for="name">Fecha de nacimiento</label>
-									<input id="birthDate" type="date" class="form-control" name="name" autofocus>
+									<label for="birthDate">Fecha de nacimiento</label>
+									<input id="birthDate" type="date" class="form-control" name="birthDate" autofocus>
 									<div class="invalid-feedback" id="invalid-birthdate">
 										Tienes que ser mayor de edad
 									</div>
