--- a/pages/forms/login.html
+++ b/pages/forms/login.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Iniciar sesión</title>
-	<link href="{% static 'img/logo.jpg' %}" rel="shortcut icon">
+	<link href="{% static 'img/favicon.png' %}" rel="shortcut icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/my-login.css' %}">
 </head>
