Formulario para añadir dirección de recolección

--- a/pages/forms/signup.html
+++ b/pages/forms/signup.html
@@ -10,12 +10,13 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/my-login.css' %}">
 </head>
 <body class="my-login-page">
+<div class="bg"></div>
 	<section class="h-100">
 		<div class="container h-100">
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="{% static 'img/mappy2.jpg' %}" alt="bootstrap 4 login page">
+						<img src="{% static 'img/mappy3.png' %}" alt="bootstrap 4 login page">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
