--- a/pages/forms/login.html
+++ b/pages/forms/login.html
@@ -4,23 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Iniciar sesión</title>
+	<title>Inicia sesión</title>
 	<link href="{% static 'img/favicon.png' %}" rel="shortcut icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/my-login.css' %}">
 </head>
 
 <body class="my-login-page">
+<div class="bg"></div>
 	<section class="h-100">
 		<div class="container h-100">
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="{% static 'img/mappy2.jpg' %}" alt="logo">
+						<img src="{% static 'img/mappy3.png' %}" alt="logo">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
-							<h4 class="card-title">Iniciar sesión</h4>
+							<h4 class="card-title">Inicia sesión</h4>
 							<form method="POST" class="my-login-validation" novalidate="">
 								<div class="invalid-feedback" id="invalid-feedback">
 									Correo o contraseña incorrectos
