--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -57,7 +57,10 @@
                                 <div class="form-group">    
                                     <input id= "lng" type="text" placeholder="Longitud">
                                 </div>
-                                <div id= "map" class="mapa d-flex justify-content-center">
+                                <div class="d-flex justify-content-end">
+                                <button id="submit" onclick="window.location.href='#map'"><i class=" marker icon icon-ok">Crear marcador</i></button>
+                                </div>    
+                                <div id="map" class="mapa d-flex justify-content-center">
 
                                 </div>
                                 <div class="d-flex justify-content-end">
