--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -26,8 +26,8 @@
                     <a href="#"><i class="icon-logout"></i><span>Exit</span></a>    
                 </nav>
             </div>
-            <main class="main col">
-                <div class="row">
+            <div class="main col">
+                <div class="row justify-content-center">
                     <div class="columna col-lg-7">
                         <div class="widget form">
                             <h3 class="tittle"> Agregar nueva orden de recolección </h3>
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-            </main>
+            </div>
         </div>    
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyMn7siHMk2mTSEcVJj5GW6-PI74VmeWI&callback=initMap"
