Adelanto de DeliveryAddress.

--- a/pages/forms/addAddress.html
+++ b/pages/forms/addAddress.html
@@ -21,7 +21,7 @@
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Añade tus datos</h4>
-							<form method="POST" class="my-login-validation" novalidate="">
+							<form method="POST" action="" class="my-login-validation" novalidate="">
 								<div class="form-group">
 									<label class="abc" for="name">País</label>
 									<select class="form-control" id="country">
