--- a/pages/forms/signup.html
+++ b/pages/forms/signup.html
@@ -103,6 +103,7 @@
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/Validator.js' %}"></script>
 	<script src="{% static 'js/my-login.js' %}"></script>
+	<script src="{% static 'js/requests.js' %}"></script>
 	<script src="{% static 'js/userdao.js' %}"></script>
 	<script src="{% static 'js/signup.js' %}"></script>
 </body>
