--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -74,6 +74,7 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyMn7siHMk2mTSEcVJj5GW6-PI74VmeWI&callback=initMap"
     defer></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'dashboard/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'dashboard/js/scripts.js' %}"></script>
