--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href="{% static 'img/logo.jpg' %}" rel="shortcut icon">
 	<link rel="stylesheet" href="{% static 'mappy_board/css/main.css' %}">
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" >
 </head>
 <body>
 	<!-- SideBar -->
@@ -435,6 +436,7 @@
 	<!--====== Scripts <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyMn7siHMk2mTSEcVJj5GW6-PI74VmeWI&callback=initMap"
     defer></script>-->
 	 
+	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 	<script src="{% static 'mappy_board/js/jquery-3.1.1.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/sweetalert2.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/bootstrap.min.js' %}"></script>
