Recuperar usuario y mostrar su email. Recuperar las órdenes de recolección, almacenarlas y ponerlas en un mapa.

--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -23,7 +23,7 @@
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
 					<img src="{% static 'mappy_board/assets/img/user.png' %}" alt="UserIcon">
-					<figcaption class="text-center text-titles">Correo</figcaption>
+					<figcaption class="email-me text-center text-titles"><!--Correo --></figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
 					<li>
@@ -454,6 +454,13 @@
 	<script src="{% static 'mappy_board/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/main.js' %}"></script>
 	<script src="{% static 'mappy_board/js/map.js' %}"></script>
+	<script src="{% static 'js/requests.js' %}"></script>
+	<script src="{% static 'js/userdao.js' %}"></script>
+	<script src="{% static 'js/collectionaddressdao.js' %}"></script>
+	<script src="{% static 'js/deliveryaddressdao.js' %}"></script>
+	<script src="{% static 'js/collectionorderdao.js' %}"></script>
+
+	<script src="{% static 'mappy_board/js/queries.js' %}"></script>
 	<script>
 		$.material.init();
 	</script>
