Porgramado botón "Realizar una"

--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -360,7 +360,7 @@
 			<section id="cd-timeline" class="collectionHistory cd-container">
 				<div class="noHistory">
 					No hay órdenes de recolección en curso<br>
-					<button type="button" class="btn btn-primary btn-raised">¡Realiza una!</button>
+					<button type="button" class="doOne btn btn-primary btn-raised">¡Realiza una!</button>
 				</div>
 			</section>
 		</div>
@@ -394,7 +394,7 @@
 			        </p>
 			    </div>
 		      	<div class="modal-footer">
-		        	<button type="button" class="btn btn-primary btn-raised" data-dismiss="modal">¡Realiza una!</button>
+		        	<button type="button" class="doOne btn btn-primary btn-raised" data-dismiss="modal">¡Realiza una!</button>
 		      	</div>
 		    </div>
 	  	</div>
