--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="{% static 'mappy_board/css/main.css' %}">
 	<link rel="stylesheet" href="{% static 'css/loading.css' %}">
 	<link rel="stylesheet" href="{% static 'css/panels.css' %}">
+	<link rel="stylesheet" href="{% static 'css/my-login.css' %}">
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" >
 </head>
 <body>
@@ -105,263 +106,59 @@
 	<!----------------------------Make a collection order form------------------------------->
 
 	<div class="makeACollectionOrder">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-xs-12">
-						<div class="tab-content">
-							<div class="tab-pane fade active in" id="newSchool">
-								<div class="container-fluid">
-									<div class="row">
-										<div class="col-xs-12 col-md-10 col-md-offset-1">
-										    <form action="">
-										    	<div class="form-group label-floating">
-												  <label class="control-label">Dirección general</label>
-												  <input class="form-control" type="text">
-												  <div class="invalid-feedback">
-													El correo electrónico es incorrecto
-													</div>
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Dirección específica</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Código postal</label>
-												  <textarea class="form-control"></textarea>
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Ciudad</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">País</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Peso</label>
-												  <input class="form-control" type="number">
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Descripción</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group">
-											        <label class="control-label">Year</label>
-											        <select class="form-control">
-											          	<option>2017</option>
-											          	<option>2016</option>
-											          	<option>2015</option>
-											        </select>
-											    </div>
-												<div class="form-group">
-											      <label class="control-label">School Logo</label>
-											      <div>
-											        <input type="text" readonly="" class="form-control" placeholder="Browse...">
-											        <input type="file" >
-											      </div>
-											    </div>
-											    <p class="text-center">
-											    	<button href="#!" class="btn btn-info btn-raised btn-sm"><i class="zmdi zmdi-floppy"></i> Save</	button>
-											    </p>
-										    </form>
-										</div>
+		<div class="container-fluid">
+<div class="card fat">
+						<div class="card-body">
+							<h4 class="card-title">Inicia sesión</h4>
+							<form method="POST" class="my-login-validation" novalidate="">
+								<div class="invalid-feedback" id="invalid-feedback">
+									Correo o contraseña incorrectos
+								</div>
+								<div class="form-group">
+									<label for="email">Correo electrónico</label>
+									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+									<div class="invalid-feedback">
+										El correo electrónico es incorrecto
 									</div>
 								</div>
-							</div>
-							<div class="tab-pane fade" id="newYear">
-								<div class="container-fluid">
-									<div class="row">
-										<div class="col-xs-12 col-md-10 col-md-offset-1">
-										    <form action="">
-										    	<div class="form-group label-floating">
-												  <label class="control-label">Year</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group">
-												  <label class="control-label">Start Date</label>
-												  <input class="form-control" type="date">
-												</div>
-												<div class="form-group">
-												  <label class="control-label">End Date</label>
-												  <input class="form-control" type="date">
-												</div>
-											    <p class="text-center">
-											    	<button href="#!" class="btn btn-info btn-raised btn-sm"><i class="zmdi zmdi-floppy"></i> Save</button>
-											    </p>
-										    </form>
-										</div>
-									</div>
+
+								<div class="form-group">
+									<label for="password">Contraseña
+										<a href="#" class="float-right">
+											¿Olvidaste tu contraseña?
+										</a>
+									</label>
+									<input id="password" type="password" class="form-control" name="password" required data-eye>
+								    <div class="invalid-feedback">
+								    	La contraseña es requerida
+							    	</div>
 								</div>
-							</div>
-						  	<div class="tab-pane fade" id="listYear">
-								<div class="table-responsive">
-									<table class="table table-hover text-center">
-										<thead>
-											<tr>
-												<th class="text-center">#</th>
-												<th class="text-center">Year</th>
-												<th class="text-center">Start Date</th>
-												<th class="text-center">End Date</th>
-												<th class="text-center">Update</th>
-												<th class="text-center">Delete</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>2017</td>
-												<td>23/01/2017</td>
-												<td>07/11/2017</td>
-												<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
-												<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
-											</tr>
-											<tr>
-												<td>2</td>
-												<td>2016</td>
-												<td>23/01/2016</td>
-												<td>07/11/2016</td>
-												<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
-												<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
-											</tr>
-											<tr>
-												<td>3</td>
-												<td>2015</td>
-												<td>23/01/2015</td>
-												<td>07/11/2015</td>
-												<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
-												<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
-											</tr>
-										</tbody>
-									</table>
-									<ul class="pagination pagination-sm">
-									  	<li class="disabled"><a href="#!">«</a></li>
-									  	<li class="active"><a href="#!">1</a></li>
-									  	<li><a href="#!">2</a></li>
-									  	<li><a href="#!">3</a></li>
-									  	<li><a href="#!">4</a></li>
-									  	<li><a href="#!">5</a></li>
-									  	<li><a href="#!">»</a></li>
-									</ul>
+
+								<div class="form-group m-0">
+									<button type="submit" class="btn btn-primary btn-block">
+										Iniciar sesión
+									</button>
 								</div>
-						  	</div>
-						  	<div class="tab-pane fade" id="newPeriod">
-								<div class="container-fluid">
-									<div class="row">
-										<div class="col-xs-12 col-md-10 col-md-offset-1">
-										    <form action="">
-										    	<div class="form-group label-floating">
-												  <label class="control-label">Name</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Status</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group">
-												  <label class="control-label">Start Date</label>
-												  <input class="form-control" type="date">
-												</div>
-												<div class="form-group">
-												  <label class="control-label">End Date</label>
-												  <input class="form-control" type="date">
-												</div>
-												<div class="form-group label-floating">
-												  <label class="control-label">Amount</label>
-												  <input class="form-control" type="text">
-												</div>
-												<div class="form-group">
-											        <label class="control-label">Year</label>
-											        <select class="form-control">
-											          	<option>2017</option>
-											          	<option>2016</option>
-											          	<option>2015</option>
-											        </select>
-											    </div>
-											    <p class="text-center">
-											    	<button href="#!" class="btn btn-info btn-raised btn-sm"><i class="zmdi zmdi-floppy"></i> Save</	button>
-											    </p>
-										    </form>
-										</div>
-									</div>
+								<div class="mt-4 text-center">
+									¿No tienes una cuenta? <a href="../signup">¡Crea una!</a>
 								</div>
-							</div>
-						  	<div class="tab-pane fade" id="listPeriod">
-								<div class="table-responsive">
-									<table class="table table-hover text-center">
-										<thead>
-											<tr>
-												<th class="text-center">#</th>
-												<th class="text-center">Name</th>
-												<th class="text-center">Status</th>
-												<th class="text-center">Start Date</th>
-												<th class="text-center">End Date</th>
-												<th class="text-center">Amount</th>
-												<th class="text-center">Year</th>
-												<th class="text-center">Update</th>
-												<th class="text-center">Delete</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>Period 1</td>
-												<td>Active</td>
-												<td>23/01/2017</td>
-												<td>23/03/2017</td>
-												<td>$40</td>
-												<td>2017</td>
-												<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
-												<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
-											</tr>
-											<tr>
-												<td>2</td>
-												<td>Period 2</td>
-												<td>Active</td>
-												<td>24/03/2017</td>
-												<td>23/06/2017</td>
-												<td>$40</td>
-												<td>2017</td>
-												<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
-												<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
-											</tr>
-											<tr>
-												<td>3</td>
-												<td>Period 3</td>
-												<td>Active</td>
-												<td>24/06/2017</td>
-												<td>23/09/2017</td>
-												<td>$40</td>
-												<td>2017</td>
-												<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
-												<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
-											</tr>
-										</tbody>
-									</table>
-									<ul class="pagination pagination-sm">
-									  	<li class="disabled"><a href="#!">«</a></li>
-									  	<li class="active"><a href="#!">1</a></li>
-									  	<li><a href="#!">2</a></li>
-									  	<li><a href="#!">3</a></li>
-									  	<li><a href="#!">4</a></li>
-									  	<li><a href="#!">5</a></li>
-									  	<li><a href="#!">»</a></li>
-									</ul>
-								</div>
-						  	</div>
+							</form>
 						</div>
 					</div>
-				</div>
-			</div>
 		</div>
+	</div>
 
 	<!----------------------------History------------------------------->
 
 	<div class="historyOfCollectionOrders">
-			<section id="cd-timeline" class="collectionHistory cd-container">
-				<div class="noHistory">
+
+			<div class="noHistory">
 					No hay órdenes de recolección en curso<br>
 					<button type="button" class="doOne btn btn-primary btn-raised">¡Realiza una!</button>
-				</div>
+			</div>
+
+			<section id="cd-timeline" class="collectionHistory cd-container">
+
 			</section>
 		</div>
 
@@ -485,9 +282,5 @@
 	<script src="{% static 'mappy_board/js/dialogs.js' %}"></script>
 	<script src="{% static 'mappy_board/js/queries.js' %}"></script>
 	<script src="{% static 'mappy_board/js/card.js' %}"></script>
-	<script>
-		$.material.init();
-	</script>
-
 </body>
 </html>
