--- a/pages/mappy_board/home.html
+++ b/pages/mappy_board/home.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="{% static 'mappy_board/css/main.css' %}">
 	<link rel="stylesheet" href="{% static 'css/loading.css' %}">
 	<link rel="stylesheet" href="{% static 'css/panels.css' %}">
-	<link rel="stylesheet" href="{% static 'css/my-login.css' %}">
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" >
 </head>
 <body>
@@ -361,6 +360,7 @@
  										<option value="ZW">Zimbabwe</option>
 </select>
 												</div>
+												<div class="invalid-feedback" id="invalid-feedback">Este campo no se puede encontrar vacío</div>
 												<div class="form-group label-floating">
 											  		<label class="control-label">Ciudad</label>
 											  		<input class="form-control" type="text" id="c_city" required>
@@ -809,8 +809,6 @@
 	<script src="{% static 'mappy_board/js/jquery-3.1.1.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/sweetalert2.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'mappy_board/js/material.min.js' %}"></script>
-	<script src="{% static 'mappy_board/js/ripples.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
 	<script src="{% static 'mappy_board/js/main.js' %}"></script>
 	<script src="{% static 'mappy_board/js/map.js' %}"></script>
